# shenandoah-mussel-mark-recapture

./: .gitignore  README.md  main.py  pyproject.toml  setup.bat  setup.ps1
config/: global_figure_config.r  paths.py
data/raw/: 1 ELCO PTR21 10-11-23 Bentonville.xlsx  2 ALVA CR20 10-11-23 Bentonville.xlsx  Bentonville Data MR 2024.xlsx  Bentonville QAQC 8-25-2025.xlsx  Bentonville QAQC.xlsx  FMCC Tagged Mussels 2020-2025.xlsx  release_summary.xlsx
doc/: Steps Taken.html  Steps Taken.md
doc/Methods/: _quarto.yml  report.qmd
doc/Methods/sections/: methods.qmd  references.bib  results.qmd
scripts/: 01_load_data.py  01_load_raw_data.py  02_occasion_QC.py  02_occasion_cleanup.py  03_data_corrections  03_data_corrections.py  03_join_release_occasion.py  04_mark_input.py  05_mark_analysis.r  06_results.r  06_top_model_results.r  06a_alt_model_results.r  06a_reduced_model_comparison.r  07_reduced_model_results.r  build_report.r  load_report_results.r  run_main_analysis.r
src/: graph_util.r  util.py  util.r
