[project]
name = "shenandoah-mussel-mark-recapture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chincheron-util",
    "fastexcel>=0.16.0",
    "openpyxl>=3.1.5",
    "polars>=1.35.2",
]

[tool.uv.sources]
chincheron-util = { git = "https://github.com/Chincheron/chincheron_util", rev = "v1.0" }
